--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.0",
+    "@auth0/auth0-angular": "^2.2.3",
+    "angular-oauth2-oidc": "^17.0.2",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "ngx-toastr": "^19.0.0",
